added conf filw